# aivcs

./: .agent-handoff.md  .cursorrules  .env.example  .gitignore  .gitlab-ci.yml  .lci.toml  .local-ci.toml  AGENTS.md  CHANGELOG.md  CI_GATEWAY_MIGRATION.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  CUSTOMER_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile.aivcsd  EPIC5_PLAN.md  FAST_FREE_TESTING_INTEGRATION.md  FFT_APPLY_TO_ALL_PRS.md  FFT_CROSSPLANE_VALIDATION.md  FFT_DEPLOYMENT_TIER1.md  GEMINI.md  Makefile  PROPEL_PHASE1_SPECIFICATION.md  README.md  RELEASE_CHECKLIST.md  SECOND_CUSTOMER_DEPLOYMENT.md  dockworker.toml  flake.nix  nextest.toml  result  task.json
.config/: nextest.toml
.cursor/rules/: active-intent.mdc
.github/: copilot-instructions.md  pull_request_template.md  system-instruction.md
.github/workflows/: aivcs-eval.yml  bench.yml  ci.yml  fast-free-testing.yml  fleet-checks.yml  nixos-wsl.yml  publish.yml  release.yml
crates/aivcs-auth/: Cargo.toml
crates/aivcs-auth/keys/: private.pem  public.pem
crates/aivcs-auth/src/: main.rs
crates/aivcs-ci/: Cargo.toml
crates/aivcs-ci-domain/: Cargo.toml
crates/aivcs-ci-domain/src/: envelope.rs  error.rs  events.rs  lib.rs  recorder.rs  runner.rs  schema.rs
crates/aivcs-ci/src/: gate.rs  lib.rs  pipeline.rs  runner.rs  spec.rs  stage.rs
crates/aivcs-ci/tests/: pipeline_integration.rs
crates/aivcs-cli/: Cargo.toml
crates/aivcs-cli/src/: infra.rs  main.rs  oci.rs
crates/aivcs-core/: Cargo.toml
crates/aivcs-core/src/: a2a.rs  ci_diagnostics.rs  ci_gate.rs  ci_repair.rs  ci_runner.rs  ci_snapshot.rs  compat.rs  deploy.rs  deploy_runner.rs  enterprise.rs  event_adapter.rs  forge.rs  gate.rs  git.rs  git_host.rs  github.rs  gitlab.rs  lib.rs  main.rs  memory_context.rs  metrics.rs  obs.rs  orchestration.rs  parallel.rs  planning_autonomy.rs  publish_gate.rs  quality_guardrails.rs  recording.rs  release_registry.rs  replay.rs  reporter.rs  reporting.rs  self_healing.rs  telemetry.rs  tooling.rs  trace_artifact.rs
crates/aivcs-core/src/cas/: fs.rs  mod.rs
crates/aivcs-core/src/diff/: lcs_diff.rs  mod.rs  node_paths.rs  semantic_graph.rs  state_diff.rs  tool_calls.rs
crates/aivcs-core/src/domain/: agent_spec.rs  ci_event.rs  digest.rs  error.rs  eval.rs  mod.rs  platform.rs  release.rs  run.rs  snapshot.rs  validation.rs
crates/aivcs-core/src/domain/ci/: diagnostic.rs  mod.rs  repair.rs  result.rs  run_spec.rs  verification.rs
crates/aivcs-core/src/hitl_controls/: artifact.rs  checkpoint.rs  engine.rs  error.rs  intervention.rs  mod.rs  policy.rs  risk.rs  vote.rs
crates/aivcs-core/src/infra/: cloudflare_lb.rs  flux.rs  mod.rs  oci.rs
crates/aivcs-core/src/memory/: context.rs  decision.rs  error.rs  index.rs  learning.rs  mod.rs  provenance.rs  rationale.rs  retention.rs
crates/aivcs-core/src/multi_repo/: aggregator.rs  audit.rs  backport.rs  error.rs  graph.rs  health.rs  mod.rs  model.rs  orchestrator.rs  provenance.rs  sequencer.rs
crates/aivcs-core/src/role_orchestration/: error.rs  executor.rs  merge.rs  mod.rs  roles.rs  router.rs
crates/aivcs-core/src/sandbox/: capability.rs  engine.rs  error.rs  execution.rs  mod.rs  policy.rs  request.rs
crates/aivcs-core/tests/: ci_workflow.rs  compat.rs  deploy_by_digest.rs  diff.rs  enterprise.rs  eval_workflow.rs  fork_consistency.rs  graph_lifecycle.rs  hitl_controls.rs  memory_context.rs  memory_index_e2e.rs  memory_provenance_e2e.rs  memory_retention_e2e.rs  merge_gate.rs  multi_repo_epic9.rs  node_path_diff.rs  observability.rs  planning_autonomy.rs  platform.rs  promote_validator.rs  publish_gate.rs  quality_guardrails.rs  replay_contract.rs  reporter.rs  role_orchestration.rs  role_orchestration_e2e.rs  role_orchestration_parallel.rs  sandbox_execution.rs  sandbox_policy_e2e.rs  self_healing.rs  state_diff.rs  tool_call_diff.rs  tooling_sandbox.rs  version_consistency.rs
crates/aivcs-issuegraph/: Cargo.toml
crates/aivcs-issuegraph/src/: lib.rs
crates/aivcs-mcp-gateway/: Cargo.toml
crates/aivcs-mcp-gateway/src/: ci_tools.rs  main.rs
crates/aivcsd/: Cargo.toml
crates/aivcsd/schema/: identity.surql
crates/aivcsd/schemas/: 001_synthetic_principal.surql  002_ci_checks.surql
crates/aivcsd/src/: df.rs  github.rs  main.rs
crates/aivcsd/src/ci/: graph.rs  mod.rs  runner.rs  state.rs  worker.rs
crates/aivcsd/src/ci/nodes/: aggregate.rs  check.rs  data_fabric.rs  github_status.rs  mod.rs  setup.rs
crates/aivcsd/src/routes/: ci.rs  mod.rs
crates/aivcsd/tests/: ci_graph_test.rs  worker_loop_test.rs
crates/nix-env-manager/: Cargo.toml
crates/nix-env-manager/src/: attic.rs  error.rs  flake.rs  lib.rs  logic.rs
crates/oxidized-state/: Cargo.toml
crates/oxidized-state/examples/: test_cloud.rs
crates/oxidized-state/src/: ci.rs  error.rs  fakes.rs  handle.rs  lib.rs  migrations.rs  schema.rs  storage_traits.rs  surreal_ledger.rs  surreal_release_registry.rs
crates/oxidized-state/src/ci/: ci_run_record.rs  diagnostics_record.rs  mod.rs
crates/oxidized-state/tests/: duplicate_commit.rs  schema_init.rs  surreal_release_registry.rs  trait_contracts.rs
crates/semantic-rag-merge/: Cargo.toml
crates/semantic-rag-merge/src/: lib.rs
crates/semantic-rag-merge/tests/: merge_snapshot.rs
deploy/: Dockerfile
docs/: BRANCH_CLEANUP.md  CRATES_IO_RELEASE.md  architecture.md  dual_ledger_guide.md  getting-started.md  mcp-auth-guide.md  vision.md
docs-site/: Dockerfile  index.html  nginx.conf.template  package.json  vite.config.ts
docs-site/src/: App.tsx  main.tsx
docs/adr/: 001-memory-mom-deployment-topology.md  README.md
docs/proposals/: fleet-orchestrator.md  mcp-memory-surface.md
docs/research/: README.md  acpx-protocols-for-aivcs.md
docs/runbooks/: aivcs-ci.md  bug-fixes-2026-06.md  ci-troubleshooting.md  database-configuration.md  local-development.md  nixos-wsl.md  oci-publish-gitlab.md  (+3 more)
intent/: current.yaml
k8s/: aivcsd.yaml  config.yaml  kustomization.yaml  namespace.yaml
policy/: cloudflare-lb-allowlist.txt
results/: e2e-test-plan-audit.md
scripts/: publish-crates.sh
(+29 files in other folders)
