[workspace]
resolver = "2"

# Agent Version Control System (AIVCS) - AgentGit 2.0
# A Rust-based version control system for AI agents
# Reference: Issues #1-4

members = [
    "crates/aivcs-core",
    "crates/aivcs-cli",
    "crates/aivcs-ci",
    "crates/aivcsd",
    "crates/oxidized-state",
    "crates/nix-env-manager",
    "crates/semantic-rag-merge",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Stevedores Org <engineering@stevedores.org>"]
license = "Apache-2.0"
repository = "https://github.com/stevedores-org/aivcs"
homepage = "https://docs.stevedores.org/aivcs"
documentation = "https://docs.stevedores.org/aivcs"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database - SurrealDB
surrealdb = { version = "2.1", default-features = false, features = ["kv-mem", "kv-surrealkv", "protocol-ws", "rustls"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Testing
tempfile = "3.10"

# External crates (Stevedores ecosystem)
oxidizedgraph = "0.2.0"

# Internal crates (use published versions for crates.io)
aivcs-core = { version = "0.3.1", path = "crates/aivcs-core" }
aivcs-ci = { version = "0.3.1", path = "crates/aivcs-ci" }
oxidized-state = { version = "0.3.1", path = "crates/oxidized-state" }
nix-env-manager = { version = "0.3.1", path = "crates/nix-env-manager" }
semantic-rag-merge = { version = "0.3.1", path = "crates/semantic-rag-merge" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
