[package]
name = "aivcs-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
aivcs-core = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
tower = { version = "0.4", features = ["util"] }

