[package]
name = "aivcs-cli"
description = "Command-line interface for AIVCS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aivcs"
path = "src/main.rs"

[dependencies]
aivcs-core.workspace = true
oxidized-state.workspace = true
nix-env-manager.workspace = true
semantic-rag-merge.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Utilities
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
