[package]
name = "aivcs-core"
description = "Core VCS logic and CLI for AIVCS (agent-git)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aivcs"
path = "src/main.rs"

[dependencies]
# Internal crates
oxidized-state.workspace = true
nix-env-manager.workspace = true
semantic-rag-merge.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
