[package]
name = "aivcsd"
description = "AIVCS daemon/service stub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "aivcsd"
path = "src/main.rs"

[dependencies]
aivcs-core.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
surrealdb.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
hmac.workspace = true
