[package]
name = "aivcsd"
description = "AIVCS daemon/service stub"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "aivcsd"
path = "src/main.rs"

[dependencies]
aivcs-core.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
surrealdb.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
