[package]
name = "nix-env-manager"
description = "Nix Flakes and Attic cache integration for AIVCS (Layer 2)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["ai", "agents", "version-control", "workflow"]
categories = ["development-tools"]

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
sha2.workspace = true
hex.workspace = true

# HTTP client for Attic
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
