[package]
name = "semantic-rag-merge"
description = "Semantic merging with RAG and LLM Arbiter for AIVCS (Layer 3)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["ai", "agents", "version-control", "workflow"]
categories = ["development-tools"]

[dependencies]
# Internal crates
oxidized-state.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
